--- a/platform/argocd-foundations/appset-helm.yaml
+++ b/platform/argocd-foundations/appset-helm.yaml
@@ -10,13 +10,13 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/olga-mir/playground
-          revision: develop
+          revision: develop-cloud-run-gemini
           files:
           - path: "platform/config/repository.yaml"
           pathParamPrefix: repo
       - git:
           repoURL: https://github.com/olga-mir/playground
-          revision: develop
+          revision: develop-cloud-run-gemini
           files:
           - path: "platform/config/helm-applications/*.yaml"
           pathParamPrefix: apps
