--- a/platform/argocd-foundations/appset-crossplane-tenancies.yaml
+++ b/platform/argocd-foundations/appset-crossplane-tenancies.yaml
@@ -9,7 +9,7 @@ spec:
   generators:
   - git:
       repoURL: 'https://github.com/olga-mir/playground'
-      revision: develop
+      revision: develop-cloud-run-claude
       directories:
       - path: 'teams/*'
   template:
@@ -22,7 +22,7 @@ spec:
       project: tenants
       source:
         repoURL: 'https://github.com/olga-mir/playground'
-        targetRevision: develop
+        targetRevision: develop-cloud-run-claude
         path: '{{ path }}'
       destination:
         server: 'https://kubernetes.default.svc'
