--- a/platform/config/helm-applications/kgateway-crds.yaml
+++ b/platform/config/helm-applications/kgateway-crds.yaml
@@ -4,5 +4,5 @@ syncWave: "0"
 name: kgateway-crds
 chart: kgateway-crds
 repoURL: cr.kgateway.dev/kgateway-dev/charts
-targetRevision: v2.1.0-main
+targetRevision: v2.0.3
 namespace: kgateway-system
