crossplane upgrade from v2.0.0-preview.1 to v2.0.0-rc.1

--- a/infra-setup/flux-crossplane/base/compositions/gke-cluster-xrd.yaml
+++ b/infra-setup/flux-crossplane/base/compositions/gke-cluster-xrd.yaml
@@ -97,7 +97,7 @@ spec:
                         description: "Install Crossplane on this cluster"
                       version:
                         type: string
-                        default: "v2.0.0-preview.1"
+                        default: "v2.0.0-rc.1"
                         description: "Crossplane version"
                 required:
                 - clusterName
