refactor env variable checks

--- a/tasks/setup.yaml
+++ b/tasks/setup.yaml
@@ -3,6 +3,86 @@ version: "3"
 tasks:
   deploy:
     desc: "Run full infrastructure setup using Crossplane compositions"
+    preconditions:
+      - sh: test -n "$GKE_VPC"
+        msg: "GKE_VPC is not set"
+      - sh: test -n "$GKE_MGMT_CLUSTER"
+        msg: "GKE_MGMT_CLUSTER is not set"
+      - sh: test -n "$GKE_APPS_DEV_CLUSTER"
+        msg: "GKE_APPS_DEV_CLUSTER is not set"
+      - sh: test -n "$REGION"
+        msg: "REGION is not set"
+      - sh: test -n "$ZONE"
+        msg: "ZONE is not set"
+      - sh: test -n "$PROJECT_ID"
+        msg: "PROJECT_ID is not set"
+      - sh: test -n "$PROJECT_NUMBER"
+        msg: "PROJECT_NUMBER is not set"
+      - sh: test -n "$MGMT_SUBNET_NAME"
+        msg: "MGMT_SUBNET_NAME is not set"
+      - sh: test -n "$APPS_DEV_SUBNET_NAME"
+        msg: "APPS_DEV_SUBNET_NAME is not set"
+      - sh: test -n "$CROSSPLANE_GSA_KEY_FILE"
+        msg: "CROSSPLANE_GSA_KEY_FILE is not set"
+      - sh: test -n "$DOMAIN"
+        msg: "DOMAIN is not set"
+      - sh: test -n "$CERT_NAME"
+        msg: "CERT_NAME is not set"
+      - sh: test -n "$DNS_PROJECT"
+        msg: "DNS_PROJECT is not set"
+      - sh: test -n "$DNS_ZONE"
+        msg: "DNS_ZONE is not set"
+      - sh: test -n "$ARGOCD_STD_HOSTNAME"
+        msg: "ARGOCD_STD_HOSTNAME is not set"
+      - sh: test -n "$ARGOCD_MCP_HOSTNAME"
+        msg: "ARGOCD_MCP_HOSTNAME is not set"
+      - sh: test -n "$GITHUB_DEMO_REPO_OWNER"
+        msg: "GITHUB_DEMO_REPO_OWNER is not set"
+      - sh: test -n "$GITHUB_DEMO_REPO_NAME"
+        msg: "GITHUB_DEMO_REPO_NAME is not set"
+      - sh: test -n "$GITHUB_FLUX_PLAYGROUND_PAT"
+        msg: "GITHUB_FLUX_PLAYGROUND_PAT is not set"
+      - sh: test -n "$GITHUB_DEST_ORG_NAME"
+        msg: "GITHUB_DEST_ORG_NAME is not set"
+      - sh: test -n "$GITHUB_DEST_ORG_REPO_LVL_PAT"
+        msg: "GITHUB_DEST_ORG_REPO_LVL_PAT is not set"
+      - sh: test -n "$GITHUB_DEST_ORG_ORG_LVL_PAT"
+        msg: "GITHUB_DEST_ORG_ORG_LVL_PAT is not set"
+      - sh: test -n "$ANTHROPIC_API_KEY"
+        msg: "ANTHROPIC_API_KEY is not set"
+      - sh: test -n "$OPENAI_API_KEY"
+        msg: "OPENAI_API_KEY is not set"
+      - sh: test -n "$CLAUDE_MCP_CONFIG_FILE"
+        msg: "CLAUDE_MCP_CONFIG_FILE is not set"
+      - sh: test -n "$PINECONE_API_KEY"
+        msg: "PINECONE_API_KEY is not set"
+    env:
+      GKE_VPC: "{{.GKE_VPC}}"
+      GKE_MGMT_CLUSTER: "{{.GKE_MGMT_CLUSTER}}"
+      GKE_APPS_DEV_CLUSTER: "{{.GKE_APPS_DEV_CLUSTER}}"
+      REGION: "{{.REGION}}"
+      ZONE: "{{.ZONE}}"
+      PROJECT_ID: "{{.PROJECT_ID}}"
+      PROJECT_NUMBER: "{{.PROJECT_NUMBER}}"
+      MGMT_SUBNET_NAME: "{{.MGMT_SUBNET_NAME}}"
+      APPS_DEV_SUBNET_NAME: "{{.APPS_DEV_SUBNET_NAME}}"
+      CROSSPLANE_GSA_KEY_FILE: "{{.CROSSPLANE_GSA_KEY_FILE}}"
+      DOMAIN: "{{.DOMAIN}}"
+      CERT_NAME: "{{.CERT_NAME}}"
+      DNS_PROJECT: "{{.DNS_PROJECT}}"
+      DNS_ZONE: "{{.DNS_ZONE}}"
+      ARGOCD_STD_HOSTNAME: "{{.ARGOCD_STD_HOSTNAME}}"
+      ARGOCD_MCP_HOSTNAME: "{{.ARGOCD_MCP_HOSTNAME}}"
+      GITHUB_DEMO_REPO_OWNER: "{{.GITHUB_DEMO_REPO_OWNER}}"
+      GITHUB_DEMO_REPO_NAME: "{{.GITHUB_DEMO_REPO_NAME}}"
+      GITHUB_FLUX_PLAYGROUND_PAT: "{{.GITHUB_FLUX_PLAYGROUND_PAT}}"
+      GITHUB_DEST_ORG_NAME: "{{.GITHUB_DEST_ORG_NAME}}"
+      GITHUB_DEST_ORG_REPO_LVL_PAT: "{{.GITHUB_DEST_ORG_REPO_LVL_PAT}}"
+      GITHUB_DEST_ORG_ORG_LVL_PAT: "{{.GITHUB_DEST_ORG_ORG_LVL_PAT}}"
+      ANTHROPIC_API_KEY: "{{.ANTHROPIC_API_KEY}}"
+      OPENAI_API_KEY: "{{.OPENAI_API_KEY}}"
+      CLAUDE_MCP_CONFIG_FILE: "{{.CLAUDE_MCP_CONFIG_FILE}}"
+      PINECONE_API_KEY: "{{.PINECONE_API_KEY}}"
     cmds:
       - "{{.TASKFILE_DIR}}/infra-setup/02-create-and-setup-kind.sh"
       - "{{.TASKFILE_DIR}}/infra-setup/03-apply-compositions.sh"
