Revert "update provider resource apiversion"
This reverts commit 9552c3895feb1a6cea630a7ca0ec21a15cf42189.

--- a/infra-setup/flux-crossplane/secrets/providerconfig-gke-mgmt.yaml
+++ b/infra-setup/flux-crossplane/secrets/providerconfig-gke-mgmt.yaml
@@ -1,4 +1,4 @@
-apiVersion: pkg.crossplane.io/v1alpha1
+apiVersion: kubernetes.crossplane.io/v1
 kind: ProviderConfig
 metadata:
   name: gke-mgmt-cluster-k8s-config # ProviderConfig for Kind's Crossplane to manage GKE Mgmt Cluster
