restore lost variable in substitute config map

--- a/infra-setup/flux-crossplane/secrets/kustomization.yaml
+++ b/infra-setup/flux-crossplane/secrets/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - gcp-provider-config.yaml.tpl
-  - gcp-creds-secret-gke-mgmt.yaml.tpl
+  - gcp-provider-config.yaml
+  - gcp-creds-secret-gke-mgmt.yaml
   - providerconfig-gke-mgmt.yaml
