--- a/infra-setup/flux-crossplane/secrets/kustomization.yaml
+++ b/infra-setup/flux-crossplane/secrets/kustomization.yaml
@@ -2,6 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - gcp-provider-config.yaml
+  - providers-config.yaml
   - gcp-creds-secret-gke-mgmt.yaml
   - providerconfig-gke-mgmt.yaml
+  - apps-dev-cluster.yaml
+  - argocd-values.yaml
+  - mgmt-cluster.yaml
