restructure manifests folder

--- a/infra-setup/crossplane/secrets/gcp-creds-secret-gke-mgmt.yaml
+++ b/infra-setup/crossplane/secrets/gcp-creds-secret-gke-mgmt.yaml
@@ -1,7 +1,7 @@
 # Secret to be created on the hub cluster
 ---
 apiVersion: kubernetes.crossplane.io/v1alpha1
-kind: Object
+kind: Object # TODO - objects should not be needed
 metadata:
   name: gcp-creds-secret-on-gke-mgmt
   namespace: crossplane-system
