--- a/infra-setup/crossplane/base/providers/providers.yaml
+++ b/infra-setup/crossplane/base/providers/providers.yaml
@@ -25,3 +25,10 @@ metadata:
   name: provider-gcp-storage
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-gcp-storage:v1.12.1
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-gcp-beta-container
+spec:
+  package: xpkg.upbound.io/upbound/provider-gcp-beta-container:v0.5.1
