--- a/infra-setup/crossplane/providerconfigs/providers-config.yaml
+++ b/infra-setup/crossplane/providerconfigs/providers-config.yaml
@@ -1,3 +1,5 @@
+# ProviderConfig for GCP - references the secret created by gcp-creds-secret-gke-mgmt.yaml
+---
 apiVersion: gcp-beta.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
