--- a/tasks/setup.yaml
+++ b/tasks/setup.yaml
@@ -40,8 +40,8 @@ tasks:
         msg: "GITHUB_DEMO_REPO_OWNER is not set"
       - sh: test -n "$GITHUB_DEMO_REPO_NAME"
         msg: "GITHUB_DEMO_REPO_NAME is not set"
-      - sh: test -n "$GITHUB_FLUX_PLAYGROUND_PAT"
-        msg: "GITHUB_FLUX_PLAYGROUND_PAT is not set"
+      - sh: test -n "$GITHUB_DEMO_REPO_PAT"
+        msg: "GITHUB_DEMO_REPO_PAT is not set"
       - sh: test -n "$GITHUB_DEST_ORG_NAME"
         msg: "GITHUB_DEST_ORG_NAME is not set"
       - sh: test -n "$GITHUB_DEST_ORG_REPO_LVL_PAT"
@@ -75,7 +75,7 @@ tasks:
       ARGOCD_MCP_HOSTNAME: "{{.ARGOCD_MCP_HOSTNAME}}"
       GITHUB_DEMO_REPO_OWNER: "{{.GITHUB_DEMO_REPO_OWNER}}"
       GITHUB_DEMO_REPO_NAME: "{{.GITHUB_DEMO_REPO_NAME}}"
-      GITHUB_FLUX_PLAYGROUND_PAT: "{{.GITHUB_FLUX_PLAYGROUND_PAT}}"
+      GITHUB_DEMO_REPO_PAT: "{{.GITHUB_DEMO_REPO_PAT}}"
       GITHUB_DEST_ORG_NAME: "{{.GITHUB_DEST_ORG_NAME}}"
       GITHUB_DEST_ORG_REPO_LVL_PAT: "{{.GITHUB_DEST_ORG_REPO_LVL_PAT}}"
       GITHUB_DEST_ORG_ORG_LVL_PAT: "{{.GITHUB_DEST_ORG_ORG_LVL_PAT}}"
