--- a/infra-setup/crossplane/base/providers/providers.yaml
+++ b/infra-setup/crossplane/base/providers/providers.yaml
@@ -8,9 +8,9 @@ spec:
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-kubernetes
+  name: crossplane-contrib-provider-kubernetes
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.18.4
+  package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.18.0
 ---
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
