--- a/platform-products/networking/kgateway/kustomization.yaml
+++ b/platform-products/networking/kgateway/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
-  - helm-provider-rbac.yaml
+  - gateway-class.yaml
+  - gateway-parameters.yaml
+  - gateway.yaml
