--- a/platform-products/networking/kustomization.yaml
+++ b/platform-products/networking/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
-  - helm-provider-rbac.yaml
+  - kgateway/
+  - kgateway-ai/
+  - kgateway-mcp/
