ArgoCD configuration removed - migrated to FluxCD

--- a/infra-setup/crossplane/base/compositions/gke-cluster-composition.yaml
+++ b/infra-setup/crossplane/base/compositions/gke-cluster-composition.yaml
@@ -121,184 +121,7 @@ spec:
                 key: credentials
           {{ end }}
 
-  - step: argocd-resources
-    functionRef:
-      name: function-go-templating
-    input:
-      apiVersion: gotemplating.fn.crossplane.io/v1beta1
-      kind: GoTemplate
-      source: Inline
-      inline:
-        template: |
-          {{ if and (.observed.composite.resource.spec.parameters.argocd.enabled) (eq .observed.composite.resource.spec.parameters.clusterType "mgmt") }}
-          ---
-          # ArgoCD Namespace
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: argocd
-            annotations:
-              crossplane.io/external-name: argocd
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-namespace
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-namespace
-          ---
-          # ArgoCD Helm Release
-          apiVersion: helm.crossplane.io/v1beta1
-          kind: Release
-          metadata:
-            name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd
-            annotations:
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd
-              crossplane.io/depends-on: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-          spec:
-            providerConfigRef:
-              name: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-            forProvider:
-              namespace: argocd
-              chart:
-                name: argo-cd
-                repository: https://argoproj.github.io/argo-helm
-                version: {{ .observed.composite.resource.spec.parameters.argocd.chartVersion }}
-              values:
-                global:
-                  image:
-                    tag: {{ .observed.composite.resource.spec.parameters.argocd.version }}
-                configs:
-                  params:
-                    server.insecure: true
-                  cm:
-                    kustomize.buildOptions: "--enable-helm"
-                    application.instanceLabelKey: argocd.argoproj.io/instance
-                    timeout.reconciliation: 300s
-                    timeout.hard.reconciliation: 600s
-                    resource.trackingMethod: annotation
-                applicationSet:
-                  enabled: true
-                  resources:
-                    requests:
-                      cpu: "500m"
-                      memory: "1Gi"
-                    limits:
-                      memory: "2Gi"
-                server:
-                  resources:
-                    requests:
-                      cpu: "1000m"
-                      memory: "2Gi"
-                    limits:
-                      memory: "3Gi"
-                  replicas: 2
-                controller:
-                  resources:
-                    requests:
-                      cpu: "700m"
-                      memory: "2Gi"
-                    limits:
-                      memory: "3Gi"
-                  env:
-                    - name: ARGOCD_RECONCILIATION_TIMEOUT
-                      value: "600s"
-                repoServer:
-                  resources:
-                    requests:
-                      cpu: "250m"
-                      memory: "1Gi"
-                    limits:
-                      memory: "2Gi"
-          {{ else if and (.observed.composite.resource.spec.parameters.argocd.enabled) (eq .observed.composite.resource.spec.parameters.clusterType "apps") }}
-          ---
-          # Kubernetes ProviderConfig for apps cluster
-          apiVersion: kubernetes.crossplane.io/v1alpha1
-          kind: ProviderConfig
-          metadata:
-            name: {{ .observed.composite.resource.spec.parameters.clusterName }}-k8s-provider
-            annotations:
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-k8s-provider
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-k8s-provider
-              crossplane.io/depends-on: {{ .observed.composite.resource.spec.parameters.clusterName }}
-          spec:
-            credentials:
-              source: Secret
-              secretRef:
-                namespace: crossplane-system
-                name: {{ .observed.composite.resource.spec.parameters.clusterName }}-kubeconfig
-                key: kubeconfig
-          ---
-          # Helm ProviderConfig for apps cluster
-          apiVersion: helm.crossplane.io/v1beta1
-          kind: ProviderConfig
-          metadata:
-            name: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-            annotations:
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-              crossplane.io/depends-on: {{ .observed.composite.resource.spec.parameters.clusterName }}-k8s-provider
-          spec:
-            credentials:
-              source: Secret
-              secretRef:
-                namespace: crossplane-system
-                name: {{ .observed.composite.resource.spec.parameters.clusterName }}-kubeconfig
-                key: kubeconfig
-            identity:
-              type: GoogleApplicationCredentials
-              source: Secret
-              secretRef:
-                namespace: crossplane-system
-                name: gcp-creds
-                key: credentials
-          ---
-          # ArgoCD Agent Namespace
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: argocd
-            annotations:
-              crossplane.io/external-name: argocd
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-agent-namespace
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-agent-namespace
-          ---
-          # ArgoCD Agent (minimal installation for apps clusters)
-          apiVersion: helm.crossplane.io/v1beta1
-          kind: Release
-          metadata:
-            name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-agent
-            annotations:
-              gotemplating.fn.crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-agent
-              crossplane.io/composition-resource-name: {{ .observed.composite.resource.spec.parameters.clusterName }}-argocd-agent
-              crossplane.io/depends-on: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-          spec:
-            providerConfigRef:
-              name: {{ .observed.composite.resource.spec.parameters.clusterName }}-helm-provider
-            forProvider:
-              namespace: argocd
-              chart:
-                name: argo-cd
-                repository: https://argoproj.github.io/argo-helm
-                version: {{ .observed.composite.resource.spec.parameters.argocd.chartVersion }}
-              values:
-                global:
-                  image:
-                    tag: {{ .observed.composite.resource.spec.parameters.argocd.version }}
-                controller:
-                  enabled: false
-                dex:
-                  enabled: false
-                server:
-                  enabled: false
-                applicationSet:
-                  enabled: false
-                notifications:
-                  enabled: false
-                repoServer:
-                  replicas: 1
-                redis:
-                  enabled: false
-                configs:
-                  params:
-                    controller.k8s.clusterAdminAccess: true
-          {{ end }}
+# ArgoCD step removed - migrated to FluxCD
 
   - step: crossplane-resources
     functionRef:
